@@ -101,6 +101,16 @@ beforeEach(function() {
       });
     },
 
+    toEitherStartWith: function() {
+      var args = [].slice.call(arguments);
+      for (var i=0, l=args.length; i<l; i++) {
+        if (startsWith(this.actual, args[i])) {
+          return true;
+        }
+      }
+      return false;
+    },
+
     toSomeEndWith: function(searchString) {
       var arrayOfStrings = this.actual;
       return arrayOfStrings.some(function(oneValue) {
